--- a/index.html
+++ b/index.html
@@ -18,11 +18,27 @@
     </div>
 
     <nav>
-        <a href="#" class="nav-enlace">Inicio</a>
-        <a href="#" class="nav-enlace">Nosotros</a>
-        <a href="#" class="nav-enlace">Servicios</a>
-        <a href="#" class="nav-enlace">Contacto</a>
+        <a href="#" class="nav-enlace"><b>Hombres</b></a>
+        <a href="#" class="nav-enlace"><b>Mujeres</b></a>
+        <a href="#" class="nav-enlace"><b>Niños</b></a>
     </nav>
+
+    <section class="half">
+        <img id="ropa" src="z-pictures/zara.jpg" alt="ropa">
+    </section>
+
+    <footer>
+        <p>Instagram</p>
+        <p>Facebook</p>
+        <p>Twitter</p>
+    </footer>
     
 </body>
 </html>
+
+<!-- <nav>
+    <a href="#" class="nav-enlace">Inicio</a>
+    <a href="#" class="nav-enlace">Nosotros</a>
+    <a href="#" class="nav-enlace">Servicios</a>
+    <a href="#" class="nav-enlace">Contacto</a>
+</nav> -->
